Fix bug: Image shifts to left and progress bars of uneven size

--- a/app.css
+++ b/app.css
@@ -5,6 +5,17 @@
         height: 120px;
     }
 
+    .hbar
+    {
+    display: none;
+    width: 133px;
+    height: 10px;
+    border-radius: 5px;
+    margin-bottom: 8px;
+    background-color: #cf2f07;
+    transition: width 2s;
+    }
+
     .moves{
         display: inline-block;
         background-color: #ffffff;
@@ -37,6 +48,17 @@
         height: 88px;
     }
 
+    .hbar
+    {
+    display: none;
+    width: 96px;
+    height: 9px;
+    border-radius: 5px;
+    margin-bottom: 8px;
+    background-color: #cf2f07;
+    transition: width 2s;
+    }
+    
     .moves{
         display: inline-block;
         background-color: #ffffff;
@@ -86,30 +108,25 @@ h3{
 }
 
 #player1{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 #player2{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.hbar
-{
-  display: none;
-  width:100%;
-  height: 10px;
-  border-radius: 5px;
-  margin-bottom: 8px;
-  background-color: #cf2f07;
-  transition: width 2s;
-}
+
 #player1health
 {
   display: none;
   width:100%;
-  height: 10px;
+  height: 100%;
   border-radius: 5px;
-  /* border: 1px solid #8de6e9; */
   margin-bottom: 8px;
   background-color: #ffbf1b;
   transition: width 1s;
@@ -119,7 +136,7 @@ h3{
 {
     display: none;
     width:100%;
-    height: 10px;
+    height: 100%;
     border-radius: 5px;
     margin-bottom: 8px;;
     background-color: #ffbf1b;
